# librhys

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.md  README.pod  Versioning.cmake  rhys.pc.in
include/: logger.h  macros.h  rhys.h
include/rhys/: logger.h  macros.h
src/: logger.c  rhys.c
test/: test.c
